assignment2/target/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'of'", "'if'", "'else'", "'for'", "'while'", 
                     "'do'", "'break'", "'continue'", "'return'", "'function'", 
                     "'inherit'", "'out'", "','", "':'", "';'", "'='", "'.'", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'!'", "'&&'", "'||'", "<INVALID>", "'::'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "'boolean'", 
                     "'integer'", "'float'", "'string'", "'void'", "'auto'", 
                     "'array'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "FUNCKEYW", "INHERIT", "OUT", 
                      "COMMA", "COLON", "SEMICOLON", "EQUAL", "DOT", "OPENCMT", 
                      "LINECMT", "PLUSOP", "MINUSOP", "MULTIPLYOP", "DIVIDEOP", 
                      "MODULOOP", "NEGATEOP", "CONJUNCOP", "DISJUNCOP", 
                      "RELATIONALOP", "STRINGCONCAT", "LB", "RB", "LSQB", 
                      "RSQB", "LCB", "RCB", "BOOLTYPE", "INTTYPE", "FLOATTYPE", 
                      "STRINGTYPE", "VOIDTYPE", "AUTOTYPE", "ARRAYTYPE", 
                      "INTLIT", "FLOATLIT", "BOOLEANLIT", "STRINGLIT", "ID", 
                      "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decls = 1
    RULE_decl = 2
    RULE_vardecl = 3
    RULE_shortvardecl = 4
    RULE_fulvardecl = 5
    RULE_arraydecl = 6
    RULE_eletype = 7
    RULE_vartype = 8
    RULE_intlitlist = 9
    RULE_idlist = 10
    RULE_exprlist = 11
    RULE_funcdecl = 12
    RULE_funcproto = 13
    RULE_funcbody = 14
    RULE_returntype = 15
    RULE_paralistdecl = 16
    RULE_paradecl = 17
    RULE_expr = 18
    RULE_stringexpr = 19
    RULE_relationalexpr = 20
    RULE_logical_and_orexpr = 21
    RULE_addingexpr = 22
    RULE_multiplyingexpr = 23
    RULE_logical_negateexpr = 24
    RULE_signexpr = 25
    RULE_indexopexpr = 26
    RULE_operand = 27
    RULE_bracket = 28
    RULE_const = 29
    RULE_var = 30
    RULE_funccall = 31
    RULE_arglist = 32
    RULE_arg = 33
    RULE_arraylit = 34
    RULE_stmt = 35
    RULE_assignstmt = 36
    RULE_lhs = 37
    RULE_indexop = 38
    RULE_ifstmt = 39
    RULE_forstmt = 40
    RULE_whilestmt = 41
    RULE_dowhilestmt = 42
    RULE_breakstmt = 43
    RULE_continuestmt = 44
    RULE_returnstmt = 45
    RULE_callstmt = 46
    RULE_blockstmt = 47
    RULE_blockBody = 48
    RULE_atomictype = 49

    ruleNames =  [ "program", "decls", "decl", "vardecl", "shortvardecl", 
                   "fulvardecl", "arraydecl", "eletype", "vartype", "intlitlist", 
                   "idlist", "exprlist", "funcdecl", "funcproto", "funcbody", 
                   "returntype", "paralistdecl", "paradecl", "expr", "stringexpr", 
                   "relationalexpr", "logical_and_orexpr", "addingexpr", 
                   "multiplyingexpr", "logical_negateexpr", "signexpr", 
                   "indexopexpr", "operand", "bracket", "const", "var", 
                   "funccall", "arglist", "arg", "arraylit", "stmt", "assignstmt", 
                   "lhs", "indexop", "ifstmt", "forstmt", "whilestmt", "dowhilestmt", 
                   "breakstmt", "continuestmt", "returnstmt", "callstmt", 
                   "blockstmt", "blockBody", "atomictype" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    FUNCKEYW=10
    INHERIT=11
    OUT=12
    COMMA=13
    COLON=14
    SEMICOLON=15
    EQUAL=16
    DOT=17
    OPENCMT=18
    LINECMT=19
    PLUSOP=20
    MINUSOP=21
    MULTIPLYOP=22
    DIVIDEOP=23
    MODULOOP=24
    NEGATEOP=25
    CONJUNCOP=26
    DISJUNCOP=27
    RELATIONALOP=28
    STRINGCONCAT=29
    LB=30
    RB=31
    LSQB=32
    RSQB=33
    LCB=34
    RCB=35
    BOOLTYPE=36
    INTTYPE=37
    FLOATTYPE=38
    STRINGTYPE=39
    VOIDTYPE=40
    AUTOTYPE=41
    ARRAYTYPE=42
    INTLIT=43
    FLOATLIT=44
    BOOLEANLIT=45
    STRINGLIT=46
    ID=47
    WS=48
    UNCLOSE_STRING=49
    ILLEGAL_ESCAPE=50
    ERROR_CHAR=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decls(self):
            return self.getTypedRuleContext(MT22Parser.DeclsContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.decls()
            self.state = 101
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def decls(self):
            return self.getTypedRuleContext(MT22Parser.DeclsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecls" ):
                return visitor.visitDecls(self)
            else:
                return visitor.visitChildren(self)




    def decls(self):

        localctx = MT22Parser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decls)
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.decl()
                self.state = 104
                self.decls()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(MT22Parser.SEMICOLON, 0)

        def shortvardecl(self):
            return self.getTypedRuleContext(MT22Parser.ShortvardeclContext,0)


        def fulvardecl(self):
            return self.getTypedRuleContext(MT22Parser.FulvardeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 113
                self.shortvardecl()
                pass

            elif la_ == 2:
                self.state = 114
                self.fulvardecl()
                pass


            self.state = 117
            self.match(MT22Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShortvardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def vartype(self):
            return self.getTypedRuleContext(MT22Parser.VartypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_shortvardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShortvardecl" ):
                return visitor.visitShortvardecl(self)
            else:
                return visitor.visitChildren(self)




    def shortvardecl(self):

        localctx = MT22Parser.ShortvardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_shortvardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.idlist()
            self.state = 120
            self.match(MT22Parser.COLON)
            self.state = 121
            self.vartype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FulvardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def vartype(self):
            return self.getTypedRuleContext(MT22Parser.VartypeContext,0)


        def EQUAL(self):
            return self.getToken(MT22Parser.EQUAL, 0)

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def fulvardecl(self):
            return self.getTypedRuleContext(MT22Parser.FulvardeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_fulvardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFulvardecl" ):
                return visitor.visitFulvardecl(self)
            else:
                return visitor.visitChildren(self)




    def fulvardecl(self):

        localctx = MT22Parser.FulvardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_fulvardecl)
        try:
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.match(MT22Parser.ID)
                self.state = 124
                self.match(MT22Parser.COLON)
                self.state = 125
                self.vartype()
                self.state = 126
                self.match(MT22Parser.EQUAL)
                self.state = 127
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.match(MT22Parser.ID)
                self.state = 130
                self.match(MT22Parser.COMMA)
                self.state = 131
                self.fulvardecl()
                self.state = 132
                self.match(MT22Parser.COMMA)
                self.state = 133
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraydeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAYTYPE(self):
            return self.getToken(MT22Parser.ARRAYTYPE, 0)

        def LSQB(self):
            return self.getToken(MT22Parser.LSQB, 0)

        def intlitlist(self):
            return self.getTypedRuleContext(MT22Parser.IntlitlistContext,0)


        def RSQB(self):
            return self.getToken(MT22Parser.RSQB, 0)

        def eletype(self):
            return self.getTypedRuleContext(MT22Parser.EletypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arraydecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraydecl" ):
                return visitor.visitArraydecl(self)
            else:
                return visitor.visitChildren(self)




    def arraydecl(self):

        localctx = MT22Parser.ArraydeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arraydecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(MT22Parser.ARRAYTYPE)
            self.state = 138
            self.match(MT22Parser.LSQB)
            self.state = 139
            self.intlitlist()
            self.state = 140
            self.match(MT22Parser.RSQB)
            self.state = 141
            self.match(MT22Parser.T__0)
            self.state = 142
            self.eletype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EletypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomictype(self):
            return self.getTypedRuleContext(MT22Parser.AtomictypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_eletype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEletype" ):
                return visitor.visitEletype(self)
            else:
                return visitor.visitChildren(self)




    def eletype(self):

        localctx = MT22Parser.EletypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_eletype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.atomictype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VartypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomictype(self):
            return self.getTypedRuleContext(MT22Parser.AtomictypeContext,0)


        def AUTOTYPE(self):
            return self.getToken(MT22Parser.AUTOTYPE, 0)

        def arraydecl(self):
            return self.getTypedRuleContext(MT22Parser.ArraydeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vartype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVartype" ):
                return visitor.visitVartype(self)
            else:
                return visitor.visitChildren(self)




    def vartype(self):

        localctx = MT22Parser.VartypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_vartype)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLTYPE, MT22Parser.INTTYPE, MT22Parser.FLOATTYPE, MT22Parser.STRINGTYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.atomictype()
                pass
            elif token in [MT22Parser.AUTOTYPE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.match(MT22Parser.AUTOTYPE)
                pass
            elif token in [MT22Parser.ARRAYTYPE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 148
                self.arraydecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntlitlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(MT22Parser.INTLIT, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def intlitlist(self):
            return self.getTypedRuleContext(MT22Parser.IntlitlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_intlitlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntlitlist" ):
                return visitor.visitIntlitlist(self)
            else:
                return visitor.visitChildren(self)




    def intlitlist(self):

        localctx = MT22Parser.IntlitlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_intlitlist)
        try:
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.match(MT22Parser.INTLIT)
                self.state = 152
                self.match(MT22Parser.COMMA)
                self.state = 153
                self.intlitlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.match(MT22Parser.INTLIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist" ):
                return visitor.visitIdlist(self)
            else:
                return visitor.visitChildren(self)




    def idlist(self):

        localctx = MT22Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_idlist)
        try:
            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.match(MT22Parser.ID)
                self.state = 158
                self.match(MT22Parser.COMMA)
                self.state = 159
                self.idlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.match(MT22Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def exprlist(self):
            return self.getTypedRuleContext(MT22Parser.ExprlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_exprlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprlist" ):
                return visitor.visitExprlist(self)
            else:
                return visitor.visitChildren(self)




    def exprlist(self):

        localctx = MT22Parser.ExprlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_exprlist)
        try:
            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.expr()
                self.state = 164
                self.match(MT22Parser.COMMA)
                self.state = 165
                self.exprlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 167
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcproto(self):
            return self.getTypedRuleContext(MT22Parser.FuncprotoContext,0)


        def funcbody(self):
            return self.getTypedRuleContext(MT22Parser.FuncbodyContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):

        localctx = MT22Parser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_funcdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.funcproto()
            self.state = 171
            self.funcbody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncprotoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.ID)
            else:
                return self.getToken(MT22Parser.ID, i)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCKEYW(self):
            return self.getToken(MT22Parser.FUNCKEYW, 0)

        def returntype(self):
            return self.getTypedRuleContext(MT22Parser.ReturntypeContext,0)


        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def paralistdecl(self):
            return self.getTypedRuleContext(MT22Parser.ParalistdeclContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_funcproto

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncproto" ):
                return visitor.visitFuncproto(self)
            else:
                return visitor.visitChildren(self)




    def funcproto(self):

        localctx = MT22Parser.FuncprotoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_funcproto)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(MT22Parser.ID)
            self.state = 174
            self.match(MT22Parser.COLON)
            self.state = 175
            self.match(MT22Parser.FUNCKEYW)
            self.state = 176
            self.returntype()
            self.state = 177
            self.match(MT22Parser.LB)
            self.state = 179
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.INHERIT) | (1 << MT22Parser.OUT) | (1 << MT22Parser.ID))) != 0):
                self.state = 178
                self.paralistdecl()


            self.state = 181
            self.match(MT22Parser.RB)
            self.state = 184
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 182
                self.match(MT22Parser.INHERIT)
                self.state = 183
                self.match(MT22Parser.ID)

